--- a/web/style.css
+++ b/web/style.css
@@ -52,6 +52,8 @@ body {
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 #buttonsContainer {
