--- a/web/style.css
+++ b/web/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,600);
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -59,11 +61,12 @@ body {
 #buttonsContainer {
     display: flex;
     gap: 10px;
+    margin: 14px;
 }
 
 .actionButton {
     padding: 10px;
-    background-color: #e74c3c;
+    background-color: #27aadd;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -80,9 +83,76 @@ body {
 }
 
 #console {
-    margin-top: 20px;
+    margin-top: 50px;
     padding: 10px;
     background-color: #ecf0f1;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.snip1245 {
+  font-family: 'Raleway', Arial, sans-serif;
+  border: none;
+  background-color: #1f2c31;
+  border-radius: 5px;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 0px 20px 0px 70px;
+  display: inline-block;
+  margin: 15px 30px;
+  text-transform: uppercase;
+  line-height: 2.7em;
+  font-weight: 600;
+  font-size: 1em;
+  outline: none;
+  position: relative;
+  font-size: 16px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.snip1245:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  -webkit-transform: translateY(5px);
+  transform: translateY(5px);
+  background-color: inherit;
+  border-radius: 10px;
+  z-index: -1;
+  box-shadow: inset 0 -6px 10px rgba(0, 0, 0, 0.75);
+}
+.snip1245:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 50px;
+  border-radius: 5px 0 0 5px;
+  background-color: rgba(255, 255, 255, 0.15);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.snip1245 i {
+  font-size: 1.5em;
+  width: 50px;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  left: 0;
+  border-radius: 5px 0 0 5px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.snip1245:hover:after,
+.snip1245.hover:after {
+  width: 100%;
+  border-radius: 5px;
+}
+.snip1245:hover i,
+.snip1245.hover i {
+  background-color: rgba(255, 255, 255, 0.15);
 }
