--- a/web/frame&code_editor.css
+++ b/web/frame&code_editor.css
@@ -2,39 +2,32 @@
 #container {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    margin: 20px;
+    height: 1000px;
+    resize: vertical;
+    overflow: scroll;
 }
 
 #editorContainer {
     flex: 1;
     background-color: #b9b05f00    ; /* White editor background */
     padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-right: 20px;
+    box-shadow: 0 0 10px #00000062;
+    margin:5px;
     width: 40%;
-}
-
-#editor {
-    height: 1000px;
-    border: 0;
-    padding: 0px;
-    margin-top: 0;
+    height: 100%;
     
+
 }
-
-
 #iframeContainer {
-    flex: 1;
+    flex:1;
+    height: 100%;
     background-color: #b9b05f00    ; /* White editor background */
     padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-right: 20px;
-    width: 100%;
-    padding: 2px;
-    resize: vertical;
-    overflow: scroll;
+    box-shadow: 0 0 10px #00000062;
+    width: 40%;
+
+    margin:5px;
     
 }
 
@@ -42,7 +35,7 @@
 
 #myIFrame {
     width: 100%;
-    height: 100;
+    height: 100%;
     border: none;
     
 }
