--- a/web/css/buttons.css
+++ b/web/css/buttons.css
@@ -1,3 +1,10 @@
+#buttonsContainer
+{
+display: block;
+margin-top: 40px;
+padding: 10px;
+width: 50%;
+}
 .snip1245 {
     font-family: 'Raleway', Arial, sans-serif;
     border: none;
